# msg

./: .clang-format  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  LICENSE  Makefile  README.md  config.h  default.nix  flake.nix  msg.c  watch.sh
compromyse.xyz/: abc.txt  base.html  config.cfg  index.html  projects.html
compromyse.xyz/assets/: abc
compromyse.xyz/partials/: hello.html  navbar.html  tailwind_class_groups.html
compromyse.xyz/posts/: a.html  b.md
compromyse.xyz/templates/: xyz.html
example_site/: .exclude  index.html
example_site/.out/: index.html
include/: config.h  copy.h  engine.h  filehandler.h  lexer.h  list.h  main.h  msg.h  ops.h  template.h  util.h
site/: index.html
src/: config.c  copy.c  engine.c  engine.h  filehandler.c  lexer.c  list.c  main.c  msg.c  ops.c  template.c  template.h  util.c  util.h
src/engine/: contentfor.c  eachdo.c  engine.c  include.c
